[gd_scene load_steps=2 format=3 uid="uid://dkifg7wq00643"]

[ext_resource type="Script" uid="uid://b48finqcun00a" path="res://addons/inventory_manager/powerup_panel.gd" id="1"]

[node name="PanelContainer" type="PanelContainer"]
offset_top = 26.0
offset_right = 248.0
offset_bottom = 132.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Duration (sec): "
horizontal_alignment = 1

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stack Duration:"
horizontal_alignment = 1

[node name="CheckButton" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "On"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "One Use:"
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "On"

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_duration_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/CheckButton" to="." method="_on_stack_duration_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer3/CheckBox" to="." method="_on_one_use_toggled"]
